   - IPsec:
     * Added support for custom per-tunnel options via 'options:ipsec_*' knobs.
       See Documentation/tutorials/ipsec.rst for details.
   - Windows:
     * Conntrack support for TCPv6, UDPv6, ICMPv6, FTPv6.
     * IPv6 Geneve tunnel support.
   - DPDK:
     * OVS validated with DPDK 21.11.1.  It is recommended to use this version
       until further releases.
   - Userspace datapath:
     * 'dpif-netdev/subtable-lookup-prio-get' appctl command renamed to
       'dpif-netdev/subtable-lookup-info-get' to better reflect its purpose.
       The old variant is kept for backward compatibility.


v2.17.0 - 17 Feb 2022
---------------------
   - Userspace datapath:
     * Optimized flow lookups for datapath flows with simple match criteria.
       See 'Simple Match Lookup' in Documentation/topics/dpdk/bridge.rst.
     * New per-interface configuration knob 'other_config:tx-steering'.  If set
       to 'hash', enables hash-based Tx packet steering mode to utilize all the
       Tx queues of the interface regardles of the number of PMD threads.
     * Removed experimental tag for PMD Auto Load Balance.
     * New configuration knob 'other_config:n-offload-threads' to change the
       number of HW offloading threads.
   - DPDK:
     * EAL argument --socket-mem is no longer configured by default upon
       start-up.  If dpdk-socket-mem and dpdk-alloc-mem are not specified,
       DPDK defaults will be used.
     * EAL argument --socket-limit no longer takes on the value of --socket-mem
       by default.  'other_config:dpdk-socket-limit' can be set equal to
       the 'other_config:dpdk-socket-mem' to preserve the legacy memory
       limiting behavior.
     * EAL argument --in-memory is applied by default if supported.
     * Add hardware offload support for matching IPv4/IPv6 frag types
       (experimental).
     * Add hardware offload support for GRE flows (experimental).
       Available only if DPDK experimental APIs enabled during the build.