@@ -39,6 +39,9 @@ Post-v2.17.0
    - DPDK:
      * OVS validated with DPDK 21.11.1.  It is recommended to use this version
        until further releases.
+     * Delay creating or reusing a mempool for vhost ports until the VM
+       is started. A failure to create a mempool will now be logged only
+       when the VM is started.
    - Userspace datapath:
      * 'dpif-netdev/subtable-lookup-prio-get' appctl command renamed to
        'dpif-netdev/subtable-lookup-info-get' to better reflect its purpose.
